<resources>
    <string name="app_name">App_Prestamo_Movil</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Repetir_Contraseña">Repetir Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Profile fragment</string>
    <string name="hello_blan_fragment">Hello Main Fragment</string>
    <string name="Clientes">Clientes</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="Deudas">Deudas</string>
    <string name="top_app_bar">Prestamos App</string>
    <string name="Configuracion">Actualizar Perfil</string>
    <string name="Cerrar_Sesión">Cerrar Sesión</string>
    <string name="content_description_media">Imagen Libro</string>
    <string name="descripcion">Libro con los conceptos basicos de la programacion en Java</string>
    <string name="nombre">Jose</string>
    <string name="telefono">23564564</string>
    <string name="correo">nn@gmail.com</string>
    <string name="direccion">Calle 22</string>
    <string name="Email">Email</string>
    <string name="Nombre">Nombre</string>
    <string name="Movil">Teléfono</string>
    <string name="Correo">Correo</string>
    <string name="Direccion">Dirección</string>
    <string name="Fecha_Actual">31-05-2021</string>
    <string name="NombreCliente">Cliente 1</string>
    <string name="Cantidad">Cantidad Prestamo</string>
    <string name="ValorPrestamo">$220.000</string>
    <string name="abono">Ha Abonado</string>
    <string name="Total">Total a Pagar</string>
    <string name="fechaPrest">Fecha del Prestamo</string>
    <string name="fechaPrestamo">10-Abril-2021</string>
    <string name="Ver_Info">Ver Información de la Deuda</string>
    <string name="cobros">COBRAR HOY: </string>
    <string name="fecha_cobro">04-06-2021</string>
    <string name="DebeCancelarHoy">Debe Cancelar Hoy: </string>
    <string name="cuotica">$20000</string>
    <string name="Imagen">Imagen</string>
    <string name="Cliente">Cliente 1</string>
    <string name="credito">Valor Crédito</string>
    <string name="Interes">Interes</string>
    <string name="cuotas"># Cuotas</string>
    <string name="totalPag">Total a Pagar</string>
    <string name="primerPag">Primer Pago</string>
    <string name="tipoPag">Tipo de Pago</string>
    <string name="concepto">Concepto</string>
    <string name="monto">Monto Pagado</string>
    <string name="deuda">Deuda Actual</string>
    <string name="deudaRest">Deuda Restante</string>
    <string name="proximo">Proximo Cobro</string>
    <string name="title_activity_info_deuda">InfoDeudaActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>