<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/clientes"
            android:icon="@drawable/outline_people_black_18dp"
            android:title="@string/Clientes"
            />
        <item
            android:id="@+id/notificaciones"
            android:icon="@drawable/outline_notifications_black_18dp"
            android:title="@string/Notificaciones"
            />
        <item
            android:id="@+id/deudas"
            android:icon="@drawable/outline_bar_chart_black_18dp"
            android:title="@string/Deudas"
            />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/group2">
        <item
            android:title="@string/Configuracion"
            android:id="@+id/configuracion"
            />
        <item android:title="@string/Cerrar_Sesión"
            android:id="@+id/cerrar_sesión"
            />
    </group>
</menu>