<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoDeudaFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Fecha_Actual"
        android:id="@+id/fecha"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/outline_account_circle_black_24"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoCliente"
        android:text="@string/NombreCliente"
            android:layout_gravity="center"
        android:textSize="35dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginLeft="30dp"
        />
    </LinearLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
    <TableRow
        android:layout_width="match_parent"
        android:paddingBottom="20dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prestamo"
            android:text="@string/Cantidad"
            android:layout_gravity="center"
            android:textSize="23dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valorPrestamo"
            android:text="@string/ValorPrestamo"
            android:layout_gravity="center"
            android:textSize="23dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginLeft="20dp"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:paddingBottom="20dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/abono"
            android:text="@string/abono"
            android:layout_gravity="center"
            android:textSize="23dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valorAbono"
            android:text="@string/ValorPrestamo"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:textSize="23dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginLeft="20dp"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:paddingBottom="20dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totPagar"
            android:text="@string/Total"
            android:layout_gravity="center"
            android:textSize="23dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalPagar"
            android:text="@string/ValorPrestamo"
            android:layout_gravity="center"
            android:textColor="@color/green"
            android:textSize="23dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginLeft="20dp"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:paddingBottom="20dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fechaPrestamo"
            android:text="@string/fechaPrest"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fechaP"
            android:text="@string/fechaPrestamo"
            android:layout_gravity="center"
            android:textSize="23dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginLeft="20dp"
            />
    </TableRow>
    </TableLayout>
</LinearLayout>